hphp/test/quick/typechecks-obj.php.expectf
object(C)#1 (0) {
}
object(D)#2 (0) {
}
NULL

Fatal error: Argument 1 passed to f() must be an instance of C, stdClass given in %s on line 6
